@@ -1,3 +1,6 @@
+nanoflann 1.1.3: In SVN trunk
+  * Avoid potential collision of min/max macros with <windows.h>
+
 nanoflann 1.1.2: Released May 2, 2012
   * Better documentation and added graphs of a benchmarking for helping choosing "leaf_max_size".
   * Now KDTreeSingleIndexAdaptor::buildIndex() can be called several times 
